# cookiecutter-cmake

./: .gitignore  LICENSE  README.md
header-only/{{cookiecutter.project_name}}/: CMakeLists.txt  README.md
header-only/{{cookiecutter.project_name}}/.github/workflows/: cmake-multi-platform.yml  doxygen-gh-pages.yml
header-only/{{cookiecutter.project_name}}/cmake/: {{cookiecutter.project_name}}Config.cmake.in
header-only/{{cookiecutter.project_name}}/include/{{cookiecutter.include_dir}}/: {{cookiecutter.project_name}}.hpp
header-only/{{cookiecutter.project_name}}/tests/: CMakeLists.txt
standalone/: cookiecutter.json
standalone/{{cookiecutter.project_name}}/: CMakeLists.txt  README.md
standalone/{{cookiecutter.project_name}}/.github/workflows/: cmake-multi-platform.yml  doxygen-gh-pages.yml
standalone/{{cookiecutter.project_name}}/include/{{cookiecutter.include_dir}}/: {{cookiecutter.project_name}}.hpp
standalone/{{cookiecutter.project_name}}/src/: CMakeLists.txt  main.cpp  {{cookiecutter.project_name}}.cpp
standalone/{{cookiecutter.project_name}}/tests/: CMakeLists.txt  {{cookiecutter.project_name}}.cpp
